# wc2026-tracking-transformer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: lightning_studio_multi_gpu.yaml  local_cpu.yaml  metrica_smoke.yaml  single_gpu.yaml
data/: README.md
docs/: space-2026-research-and-ideas.md
output/: baseline_vaep_comparison.json  baseline_xt_comparison.json  chemistry_pairs.json  clip_candidates.json  finetune_metrics.json  pscore_calibration.json  space_attribution.json  training_metrics.json  training_metrics_combined.json  training_metrics_xt.json
research/: QUESTIONS.md  README.md
research/data/: attention_by_outcome.parquet  attention_by_outcome_specialist.parquet  attention_chemistry.parquet  attention_chemistry_baselined.parquet  attention_chemistry_concede_specialist.parquet  attention_chemistry_score_specialist.parquet  attention_chemistry_score_specialist_baselined.parquet  aw_chemistry.parquet  cross_context.parquet  expected_oi.parquet  jdi.parquet  (+16 more)
scripts/: _compare_attn_off_share.py  add_pair_attention.py  add_score_specialist_attention.py  analyze_space_and_chemistry.py  append_goal_tail.py  build_pre_event_eda.py  build_pregoal_attention.py  calibrate_pscore_pconcede.py  clip_renderer.py  compare_vaep_vs_ours.py  compare_xt_vs_ours.py  find_clip_candidates.py  finetune_events_and_render.py  inspect_frames.py  precache_pff_tensors.py  prepare_data.py  render_demo_clips.py  render_interactive_clip.py  render_pff_gif.py  rerender_only.py  train_frame_vaep.py  train_frame_vaep_full.sh  train_xt_regression.py  visualize_attention_combined.py  visualize_attention_gif.py
studios/: README.md
tests/: conftest.py  test_datamodule.py  test_dfl_loader.py  test_imports.py  test_lit_model.py  test_loader_skeleton.py  test_metrica_loader.py  test_vaep_baseline.py  test_xt_baseline.py
(+460 files in other folders)
