[project]
name = "wc2026-tracking-transformer"
version = "0.0.1"
description = "Soccer adaptation of the Sumer Sports tracking-data transformer, targeting the PFF FC 2022 World Cup release"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Nick Gurol" },
]
dependencies = [
    # Core ML — pinned to match Sumer's environment so ported architecture code stays compatible.
    "torch==2.3.0",
    "lightning>=2.4.0",
    # LightningCLI signature parsing — required for config-driven training.
    "jsonargparse[signatures]>=4.27.7",
    # Soccer tracking ingest. kloppy ships loaders for DFL/Sportec, SkillCorner, Metrica, PFF.
    "kloppy>=3.15.0",
    # Dataframes. We use both pandas (kloppy interop) and polars (faster bulk transforms, matches Sumer).
    "pandas>=2.2.0",
    "polars[pyarrow]>=1.5.0",
    "numpy>=1.26.0",
    "pyarrow>=15.0.0",
    "tqdm>=4.66.0",
    "matplotlib>=3.10.9",
    "pillow>=12.2.0",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6.3",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 120
indent-width = 4
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E741"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[dependency-groups]
dev = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.15.0",
    "lxml>=6.1.0",
    "onnx>=1.21.0",
    "onnxruntime>=1.26.0",
    "requests>=2.34.2",
]
